# tempyra

./: .gitignore  CANVAS_FORMAT.md  README.md  pyproject.toml
src/tempyra/: __init__.py  audio.py  canvas.py  constants.py  parameters.py
tests/: conftest.py  test_audio.py  test_canvas.py  test_constants.py  test_parameters.py
